fix layout issues

--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
                 <h1>A heading about Swords</h1>
             </div>
 
-            <h3 id="about-page-text" class="pt-5 text-center pb-5 offset-md-1.5 offset-1 col-10 col-md-9">
+            <h3 id="about-page-text" class="pt-5 text-center pb-5 col-10 col-md-9">
                 Over the past century, Swords has evolved from a small village with medieval roots into one of Ireland’s
                 fastest-growing urban areas. Once a modest rural settlement, Swords began expanding in the 20th century,
                 spurred by Dublin’s suburban growth and the development of Dublin Airport nearby. This strategic
