--- a/contact.html
+++ b/contact.html
@@ -15,15 +15,15 @@
 <body>
     <!--Nav-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid row">
-            <a class="navbar-brand col-3" href="index.html">Logo</a>
+        <div class="container-fluid">
+            <a class="navbar-brand col-4" href="index.html">Logo</a>
             <button class="navbar-toggler" id="collapse-button" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse row" id="navbarTogglerDemo02">
-                <ul id="nav-list" class="navbar-nav mb-2 mb-lg-0 col-6">
+            <div class="collapse navbar-collapse col-4" id="navbarTogglerDemo02">
+                <ul id="nav-list" class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
@@ -40,7 +40,7 @@
                         <a class="nav-link active" href="contact.html">Contact</a>
                     </li>
                 </ul>
-                <div id="nav-basket" class="col-3">
+                <div id="nav-basket" class="col-4">
                     <i class="bi bi-basket2-fill" data-bs-toggle="modal" data-bs-target="#exampleModal"></i>
                 </div>
 
@@ -68,9 +68,9 @@
     </nav>
 
     <main>
-        <section>
+        <section class="mt-5">
             <div id="contact-headings" class="d-flex align-items-center flex-column">
-                <p>SWORDS TOURIST BOARD</p>
+                <p class="mb-1">SWORDS TOURIST BOARD</p>
                 <h1>CONTACT US</h1>
             </div>
             <div class="row">
@@ -108,9 +108,11 @@
                     </div>
                     <div id="contact-details" class="d-flex flex-column justify-content-between">
                         <div class="mb-5">
-                            <p class="contact-details-p d-flex justify-content-between mb-2"><i class="bi bi-telephone-fill"></i> <span>+353 86 255 5555</span></p>
-                            <p class="contact-details-p d-flex justify-content-between mb-2"><i class="bi bi-envelope-fill"></i> <span>contact@swordstourism.ie</span></p>
-                        </div>             
+                            <p class="contact-details-p d-flex justify-content-between mb-2"><i
+                                    class="bi bi-telephone-fill"></i> <span>+353 86 255 5555</span></p>
+                            <p class="contact-details-p d-flex justify-content-between mb-2"><i
+                                    class="bi bi-envelope-fill"></i> <span>contact@swordstourism.ie</span></p>
+                        </div>
                         <div>
                             <p class="contact-details-p text-center"><i class="bi bi-geo-alt-fill"></i></p>
                             <p class="contact-details-p text-center">Fingal County Council</p>
@@ -118,10 +120,14 @@
                             <p class="contact-details-p text-center">County Dublin</p>
                             <p class="contact-details-p text-center">K67 X8Y2</p>
                         </div>
-                        
                     </div>
                 </div>
-
+        </section>
+        <section>
+            <div class="row d-flex justify-content-center"><iframe width="90%" height="600" frameborder="0" scrolling="no" marginheight="0"
+                    marginwidth="0"
+                    src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=County%20Hall,County%20Hall,%20Main%20St,%20Swords%20Demesne,%20Swords,%20Co.%20Dublin,%20K67%20X8Y2+(Fingal%20Tourism%20Office)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a
+                        href="https://www.gps.ie/">gps vehicle tracker</a></iframe></div>
         </section>
     </main>
 
