--- a/history.html
+++ b/history.html
@@ -16,15 +16,15 @@
 <body>
     <!--Nav-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid row">
-            <a class="navbar-brand col-3" href="index.html">Logo</a>
+        <div class="container-fluid">
+            <a class="navbar-brand col-4" href="index.html">Logo</a>
             <button class="navbar-toggler" id="collapse-button" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse row" id="navbarTogglerDemo02">
-                <ul id="nav-list" class="navbar-nav mb-2 mb-lg-0 col-6">
+            <div class="collapse navbar-collapse col-4" id="navbarTogglerDemo02">
+                <ul id="nav-list" class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
@@ -41,7 +41,7 @@
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
-                <div id="nav-basket" class="col-3">
+                <div id="nav-basket" class="col-4">
                     <i class="bi bi-basket2-fill" data-bs-toggle="modal" data-bs-target="#exampleModal"></i>
                 </div>
 
@@ -165,6 +165,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     <script src="assets/js/script.js"></script>
 </body>
 
