--- a/shopping.html
+++ b/shopping.html
@@ -15,15 +15,15 @@
 
 <!--Nav-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid row">
-        <a class="navbar-brand col-3" href="index.html">Logo</a>
+    <div class="container-fluid">
+        <a class="navbar-brand col-4" href="index.html">Logo</a>
         <button class="navbar-toggler" id="collapse-button" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
             aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse row" id="navbarTogglerDemo02">
-            <ul id="nav-list" class="navbar-nav mb-2 mb-lg-0 col-6">
+        <div class="collapse navbar-collapse col-4" id="navbarTogglerDemo02">
+            <ul id="nav-list" class="navbar-nav mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="index.html">Home</a>
                 </li>
@@ -40,7 +40,7 @@
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
-            <div id="nav-basket" class="col-3">
+            <div id="nav-basket" class="col-4">
                 <i class="bi bi-basket2-fill" data-bs-toggle="modal" data-bs-target="#exampleModal"></i>
             </div>
 
@@ -50,7 +50,8 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
                             ...
