add modal to each page

--- a/about.html
+++ b/about.html
@@ -84,10 +84,13 @@
             </div>
         </section>
         <section>
-            <h3 id="about-page-text" class="pt-5 text-center pb-5 offset-md-3 offset-1 col-10 col-md-6">
-                Just north of Dublin, Swords combines historic charm with modern energy. Explore Swords Castle, scenic
-                parks, and vibrant local culture—an ideal gateway to North County Dublin.
-            </h3>
+            <div class="d-flex justify-content-center">
+                <h3 id="about-page-text" class="pt-5 text-center pb-5">
+                    Just north of Dublin, Swords combines historic charm with modern energy. Explore Swords Castle, scenic
+                    parks, and vibrant local culture—an ideal gateway to North County Dublin.
+                </h3>
+            </div>
+            
             <div class="row justify-content-center">
                 <div class="d-flex justify-content-center col-9 col-md-4 mb-5">
                     <div class="about-card card bg-dark text-white">
